syntax = "proto3";

option java_multiple_files = true;


package net.gichain.test.grpc.dto;

message UserInfoRequest{
    string name = 1;
}
